--- a/ios_translate/Screens/MainView/MainTranslateView.xib
+++ b/ios_translate/Screens/MainView/MainTranslateView.xib
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="22689"/>
-        <capability name="Combo buttons" minToolsVersion="14.0" minSystemVersion="13.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -11,6 +9,8 @@
             <connections>
                 <outlet property="customLeftView" destination="HTj-rq-z8v" id="w9z-um-LAM"/>
                 <outlet property="customRightView" destination="f3F-Rh-gQf" id="cIv-tH-fa0"/>
+                <outlet property="exportButton" destination="47L-5A-Y4C" id="kpQ-9b-2L8"/>
+                <outlet property="importButton" destination="Mcc-Ex-vIk" id="umT-ch-Hnt"/>
                 <outlet property="selectApplicationButton" destination="rwY-C2-0dh" id="okz-aL-aMW"/>
                 <outlet property="splitView" destination="Pif-p5-f9Z" id="KU5-gn-LcA"/>
             </connections>
@@ -18,11 +18,11 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="c22-O7-iKe">
-            <rect key="frame" x="0.0" y="0.0" width="645" height="272"/>
+            <rect key="frame" x="0.0" y="0.0" width="1883" height="272"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <stackView distribution="fill" orientation="horizontal" alignment="centerY" spacing="0.0" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RRg-1e-3EK">
-                    <rect key="frame" x="10" y="232" width="625" height="30"/>
+                <stackView distribution="fill" orientation="horizontal" alignment="centerY" spacing="10" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RRg-1e-3EK">
+                    <rect key="frame" x="10" y="232" width="1863" height="30"/>
                     <subviews>
                         <popUpButton horizontalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="rwY-C2-0dh">
                             <rect key="frame" x="-3" y="-4" width="76" height="37"/>
@@ -37,6 +37,7 @@
                                     </items>
                                 </menu>
                             </popUpButtonCell>
+                            <color key="bezelColor" name="systemCyanColor" catalog="System" colorSpace="catalog"/>
                             <constraints>
                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="70" id="ZcG-Mp-HqZ"/>
                             </constraints>
@@ -44,26 +45,77 @@
                                 <action selector="didSelectedApplication:" target="-2" id="jVo-mh-Fhb"/>
                             </connections>
                         </popUpButton>
+                        <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Mcc-Ex-vIk">
+                            <rect key="frame" x="77" y="1" width="325" height="25"/>
+                            <popUpButtonCell key="cell" type="push" title="Import" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="ze6-sW-Aq0" id="juP-bk-ixs">
+                                <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
+                                <font key="font" metaFont="menu"/>
+                                <menu key="menu" id="mCU-Gm-wIp">
+                                    <items>
+                                        <menuItem title="Import" state="on" id="ze6-sW-Aq0"/>
+                                        <menuItem title="Item 2" id="Lxf-fF-oAi"/>
+                                        <menuItem title="Item 3" id="kKQ-Sl-K37"/>
+                                    </items>
+                                </menu>
+                            </popUpButtonCell>
+                        </popUpButton>
                         <customView translatesAutoresizingMaskIntoConstraints="NO" id="J5f-SE-ZPt">
-                            <rect key="frame" x="70" y="0.0" width="504" height="30"/>
+                            <rect key="frame" x="408" y="0.0" width="1094" height="30"/>
                         </customView>
-                        <comboButton verticalHuggingPriority="750" continuous="YES" baseWritingDirection="leftToRight" alignment="center" title="Button" imageScaling="proportionallyDown" style="unified" translatesAutoresizingMaskIntoConstraints="NO" id="kOA-Wu-SbH" customClass="AddMoreLanguageButton" customModule="ios_translate" customModuleProvider="target">
-                            <rect key="frame" x="571" y="-2" width="57" height="34"/>
-                            <menu key="menu" title="Hello" id="hvx-so-MtX">
-                                <items>
-                                    <menuItem title="Item 1" state="on" id="uUC-QI-7d0"/>
-                                    <menuItem title="Item 2" state="on" id="GXw-k4-vn0"/>
-                                </items>
-                            </menu>
-                        </comboButton>
+                        <button translatesAutoresizingMaskIntoConstraints="NO" id="EXZ-Mo-ouU">
+                            <rect key="frame" x="1509" y="1" width="81" height="27"/>
+                            <buttonCell key="cell" type="bevel" title="Add New" bezelStyle="regularSquare" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="wJF-DV-6OY">
+                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                <font key="font" metaFont="system"/>
+                            </buttonCell>
+                            <connections>
+                                <action selector="didTapAddNewKey:" target="-2" id="5kA-ib-edV"/>
+                            </connections>
+                        </button>
+                        <button translatesAutoresizingMaskIntoConstraints="NO" id="xWv-N6-MdL">
+                            <rect key="frame" x="1594" y="1" width="117" height="27"/>
+                            <buttonCell key="cell" type="bevel" title="Set Languages" bezelStyle="regularSquare" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="RkQ-oP-DUk">
+                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                <font key="font" metaFont="system"/>
+                            </buttonCell>
+                            <connections>
+                                <action selector="didClickSetLanguages:" target="-2" id="Gzo-MT-acV"/>
+                            </connections>
+                        </button>
+                        <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="47L-5A-Y4C">
+                            <rect key="frame" x="1715" y="1" width="79" height="25"/>
+                            <popUpButtonCell key="cell" type="push" title="Export" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="glT-7D-SfR" id="jxZ-Ld-0gJ">
+                                <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
+                                <font key="font" metaFont="menu"/>
+                                <menu key="menu" id="9Ov-Wh-bpV">
+                                    <items>
+                                        <menuItem title="Export" state="on" id="glT-7D-SfR"/>
+                                        <menuItem title="Item 2" id="DU5-vC-Mr8"/>
+                                        <menuItem title="Item 3" id="c5V-fr-wfF"/>
+                                    </items>
+                                </menu>
+                            </popUpButtonCell>
+                        </popUpButton>
+                        <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="5zy-E5-IoB">
+                            <rect key="frame" x="1793" y="-2" width="77" height="32"/>
+                            <buttonCell key="cell" type="push" title="Logout" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="JKV-6h-Zz9">
+                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                <font key="font" metaFont="system"/>
+                            </buttonCell>
+                            <connections>
+                                <action selector="logout:" target="-2" id="9mJ-wD-af3"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <constraints>
                         <constraint firstItem="rwY-C2-0dh" firstAttribute="top" secondItem="RRg-1e-3EK" secondAttribute="top" id="3A4-uS-Mkx"/>
                         <constraint firstAttribute="height" constant="30" id="BpW-mT-Wqn"/>
-                        <constraint firstItem="kOA-Wu-SbH" firstAttribute="top" secondItem="RRg-1e-3EK" secondAttribute="top" id="DTj-mX-0tN"/>
-                        <constraint firstAttribute="bottom" secondItem="kOA-Wu-SbH" secondAttribute="bottom" id="VnB-Nv-0q6"/>
                     </constraints>
                     <visibilityPriorities>
+                        <integer value="1000"/>
+                        <integer value="1000"/>
+                        <integer value="1000"/>
+                        <integer value="1000"/>
                         <integer value="1000"/>
                         <integer value="1000"/>
                         <integer value="1000"/>
@@ -72,17 +124,21 @@
                         <real value="3.4028234663852886e+38"/>
                         <real value="3.4028234663852886e+38"/>
                         <real value="3.4028234663852886e+38"/>
+                        <real value="3.4028234663852886e+38"/>
+                        <real value="3.4028234663852886e+38"/>
+                        <real value="3.4028234663852886e+38"/>
+                        <real value="3.4028234663852886e+38"/>
                     </customSpacing>
                 </stackView>
                 <splitView arrangesAllSubviews="NO" dividerStyle="thin" vertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pif-p5-f9Z">
-                    <rect key="frame" x="0.0" y="10" width="645" height="212"/>
+                    <rect key="frame" x="0.0" y="10" width="1883" height="212"/>
                     <subviews>
                         <customView fixedFrame="YES" id="HTj-rq-z8v" customClass="MainTranslateListLanguageView" customModule="ios_translate" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="0.0" width="237" height="212"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </customView>
                         <customView fixedFrame="YES" id="f3F-Rh-gQf" customClass="TranslateView" customModule="ios_translate" customModuleProvider="target">
-                            <rect key="frame" x="238" y="0.0" width="407" height="212"/>
+                            <rect key="frame" x="238" y="0.0" width="1645" height="212"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </customView>
                     </subviews>
