--- a/ios_translate/Screens/TranslateView/TranslateView.xib
+++ b/ios_translate/Screens/TranslateView/TranslateView.xib
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="22689"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="TranslateView" customModule="ios_translate" customModuleProvider="target">
             <connections>
+                <outlet property="emptyOnlyButton" destination="cBp-dR-lnM" id="f1i-fD-MtV"/>
                 <outlet property="searchField" destination="Lek-Mz-Ne9" id="fYD-tQ-8CH"/>
                 <outlet property="tableView" destination="6JH-E5-bOl" id="PEG-JF-IJU"/>
             </connections>
@@ -15,29 +15,53 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="c22-O7-iKe">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="349"/>
+            <rect key="frame" x="0.0" y="0.0" width="480" height="273"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <searchField wantsLayer="YES" verticalHuggingPriority="750" textCompletion="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lek-Mz-Ne9">
-                    <rect key="frame" x="0.0" y="315" width="480" height="34"/>
+                <stackView distribution="fill" orientation="horizontal" alignment="centerY" spacing="10" horizontalStackHuggingPriority="250" verticalStackHuggingPriority="250" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZK5-ng-ZVo">
+                    <rect key="frame" x="0.0" y="231" width="480" height="42"/>
+                    <subviews>
+                        <searchField wantsLayer="YES" verticalHuggingPriority="750" textCompletion="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lek-Mz-Ne9">
+                            <rect key="frame" x="0.0" y="0.0" width="374" height="42"/>
+                            <searchFieldCell key="cell" controlSize="large" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" borderStyle="bezel" placeholderString="Search Any Thing" usesSingleLineMode="YES" bezelStyle="round" id="XDr-pJ-Tdj">
+                                <font key="font" metaFont="system"/>
+                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                            </searchFieldCell>
+                        </searchField>
+                        <button verticalHuggingPriority="750" horizontalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="cBp-dR-lnM">
+                            <rect key="frame" x="381" y="10" width="99" height="22"/>
+                            <buttonCell key="cell" type="check" title="Empty Only" bezelStyle="regularSquare" imagePosition="left" controlSize="large" inset="2" id="IT3-XQ-tBV">
+                                <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                                <font key="font" metaFont="system"/>
+                            </buttonCell>
+                            <connections>
+                                <action selector="onClickEmptyOnly:" target="-2" id="82U-Ax-rds"/>
+                            </connections>
+                        </button>
+                    </subviews>
                     <constraints>
-                        <constraint firstAttribute="height" constant="34" id="vac-PF-HlZ"/>
+                        <constraint firstAttribute="bottom" secondItem="Lek-Mz-Ne9" secondAttribute="bottom" id="6B9-JD-TWw"/>
+                        <constraint firstItem="Lek-Mz-Ne9" firstAttribute="top" secondItem="ZK5-ng-ZVo" secondAttribute="top" id="Dtn-Nr-cRU"/>
                     </constraints>
-                    <searchFieldCell key="cell" controlSize="large" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" borderStyle="bezel" placeholderString="Search Any Thing" usesSingleLineMode="YES" bezelStyle="round" id="XDr-pJ-Tdj">
-                        <font key="font" metaFont="system"/>
-                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                    </searchFieldCell>
-                </searchField>
+                    <visibilityPriorities>
+                        <real value="1000"/>
+                        <real value="1000"/>
+                    </visibilityPriorities>
+                    <customSpacing>
+                        <real value="3.4028234663852886e+38"/>
+                        <real value="3.4028234663852886e+38"/>
+                    </customSpacing>
+                </stackView>
                 <scrollView autohidesScrollers="YES" horizontalLineScroll="29" horizontalPageScroll="10" verticalLineScroll="29" verticalPageScroll="10" usesPredominantAxisScrolling="NO" id="6O9-GG-oF5">
-                    <rect key="frame" x="0.0" y="0.0" width="480" height="307"/>
+                    <rect key="frame" x="0.0" y="0.0" width="480" height="231"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <clipView key="contentView" id="Zu4-7a-kOr">
-                        <rect key="frame" x="1" y="1" width="478" height="305"/>
+                        <rect key="frame" x="1" y="1" width="478" height="229"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="sequential" alternatingRowBackgroundColors="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="24" usesAutomaticRowHeights="YES" headerView="OF4-dy-mrT" id="6JH-E5-bOl">
-                                <rect key="frame" x="0.0" y="0.0" width="478" height="277"/>
+                                <rect key="frame" x="0.0" y="0.0" width="478" height="201"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <size key="intercellSpacing" width="0.0" height="5"/>
                                 <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -62,12 +86,12 @@
             </subviews>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="6O9-GG-oF5" secondAttribute="trailing" id="DH0-Rr-zZN"/>
-                <constraint firstItem="OF4-dy-mrT" firstAttribute="top" secondItem="Lek-Mz-Ne9" secondAttribute="bottom" constant="9" id="WUO-TO-Jal"/>
-                <constraint firstAttribute="trailing" secondItem="Lek-Mz-Ne9" secondAttribute="trailing" id="b8p-tN-ahY"/>
+                <constraint firstAttribute="trailing" secondItem="ZK5-ng-ZVo" secondAttribute="trailing" id="Jtr-R2-0d0"/>
+                <constraint firstItem="6O9-GG-oF5" firstAttribute="top" secondItem="ZK5-ng-ZVo" secondAttribute="bottom" id="X1o-lM-aZr"/>
+                <constraint firstItem="ZK5-ng-ZVo" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" id="Zwl-eO-Jjz"/>
                 <constraint firstAttribute="bottom" secondItem="6O9-GG-oF5" secondAttribute="bottom" id="gy8-gL-VHP"/>
-                <constraint firstItem="Lek-Mz-Ne9" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" id="k0E-bb-VGu"/>
-                <constraint firstItem="Lek-Mz-Ne9" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" id="sA3-ju-h3L"/>
                 <constraint firstItem="6O9-GG-oF5" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" id="w5q-EH-B5R"/>
+                <constraint firstItem="ZK5-ng-ZVo" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" id="xMG-8V-eKN"/>
             </constraints>
             <point key="canvasLocation" x="59" y="272.5"/>
         </customView>
